# Telesofia

./: CMakeLists.txt  README.md  package.xml  package.xml.save
config/: master_modes.yaml  puppet_modes.yaml
launch/: teleop.launch  teleop_RGB.launch  teleop_RGBD.launch
scripts/: constants.py  real_env.py  record_episodes.py  robot_utils.py  sleep.py  sleep_puppet.py  teleop.py  visualize_episodes.py
