<package format="2">
  <name>telesofia</name>
  <version>0.0.0</version>
  <description>
  MSc AI Individual Project
  </description>
  <maintainer email="cv23@ic.ac.uk">Carlos Villalobos</maintainer>
  <license>BSD</license>

  <author email="cv23@ic.ac.uk">Carlos Villalobos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>interbotix_xs_msgs</build_depend>
  <build_depend>interbotix_xsarm_control</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <build_export_depend>interbotix_xs_msgs</build_export_depend>
  <build_export_depend>interbotix_xsarm_control</build_export_depend>
  <build_export_depend>rosbag</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>interbotix_xs_msgs</exec_depend>
  <exec_depend>interbotix_xsarm_control</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend> 

  <export>
  <!--  Other tools can request additional information be placed here  -->
  </export>
</package>
